Fix text size issue on mobile device

--- a/resources/css/smallscreen.css
+++ b/resources/css/smallscreen.css
@@ -124,7 +124,7 @@ nav {
     width: 100%;
     height: auto;
    
-    padding-left: 70%;
+    padding-left: 55%;
   }
   
   .collapsable-menu ul {
@@ -135,9 +135,10 @@ nav {
   }
  
   .collapsable-menu li {
-    font-size: 0.8em;
+    font-size: 2em;
     font-family: "Optima", sans-serif;
-    padding-bottom: 0.15em;;
+    padding-bottom: 0.15em;
+    padding-right: 1em;
   }
   .collapsable-menu a {
     display: block;
@@ -204,7 +205,7 @@ nav {
     margin-top: 0.5em;
     margin-bottom: 1em;
     letter-spacing: 0.05em;
-    font-size: 2em;
+    font-size: 1.5em;
    
 }
 hr {
